@@ -54,14 +54,14 @@ G_BEGIN_DECLS
         "%s"                                        \
         "Server: %s\r\n"                            \
         "NTS: ssdp:alive\r\n"                       \
-        "ST: %s\r\n"                                \
+        "NT: %s\r\n"                                \
         "USN: %s\r\n\r\n"
 
 #define SSDP_BYEBYE_MESSAGE                         \
         "NOTIFY * HTTP/1.1\r\n"                     \
         "Host: " SSDP_ADDR ":" SSDP_PORT_STR "\r\n" \
         "NTS: ssdp:bye-bye\r\n"                     \
-        "ST: %s\r\n"                                \
+        "NT: %s\r\n"                                \
         "USN: %s\r\n\r\n"
 
 #define SSDP_SEARCH_METHOD "M-SEARCH"
